# homework_10_1_barn

./: .coverage  .flake8  .gitinore  README.md  dfdf  main.py  pyproject.toml
logs/: mylog.txt
src/: decorators.py  external_api.py  generators.py  masks.py  proccesing.py  proccessing.py  processing.py  setup_logger.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_proccessing.py  test_processing.py  test_proсcessing.py  test_utils.py  test_widget.py
