[tool.poetry]
name = "pyproject-toml"
version = "0.1.0"
description = ""
authors = ["Eduard <barned85@gmail.com>"]
readme = "README.md"
packages = [{include = "pyproject"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"


[tool.poetry.group.lint.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
isort = "^5.13.2"
flake8 = "^7.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''
